[package]
name = "palettify"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.10"
thiserror = "1.0.30"
mime = "0.3.16"
serde = {version = "1.0.130", features = ["derive"]}
serde_json = "1.0.68"
image = "0.23.14"
exoquant = "0.2.0"
dotenv = "0.15.0"