[package]
name = "palettify"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.10"
thiserror = "1.0.30"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
image = "0.23.14"
exoquant = "0.2.0"
rocket_contrib = "0.4.10"
