[package]
name = "palettify"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
thiserror = "1.0.30"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
image = "0.23.14"
exoquant = "0.2.0"
shuttle-service = { version = "0.2", features = ["web-rocket"] }

[lib]
crate-type = ["cdylib"]
